--- a/RaspberryReact/src/index.css
+++ b/RaspberryReact/src/index.css
@@ -1,17 +1,29 @@
 
 
-body {
+body{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  overflow-x: hidden;
+  min-width: 320px;
+  
+  font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
+  font-size: 14px;
+  line-height: 1.4285em;
+  color: rgba(0,0,0,.87);
+  background-color: rgb(241, 250, 249) !important;
 }
+.root{
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  min-width: 320px;
+  
+  font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
+  font-size: 14px;
+  line-height: 1.4285em;
+  color: rgba(0,0,0,.87);
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  
 }
 
 
@@ -28,17 +40,25 @@ code {
 
 .containerDiv{
   display: flex;
+  
   flex-direction: row;
   flex-wrap: wrap;
   margin:10px;
   gap:10px;
-  align-content: center;
+  align-items: center;
+  place-content:center;
+}
+.ui.card>.content, .ui.cards>.card>.content{
+  background-color: rgb(162, 229, 224) !important;
+}
+.ui.card>.content>.header:not(.ui), .ui.cards>.card>.content>.header:not(.ui){
+  margin-bottom: 20px !important;
+  font-size: 30px !important;
+  text-align: center;
+  
 }
 
-.ui.card>.content>.description{
-  display:flex !important;
-  flex-direction: row !important;
-}
+
 .containerCard{
   display:flex;
   flex-direction: row;
@@ -46,6 +66,7 @@ code {
   margin:10px;
   margin-left: 300px;
   gap:10px;
+  
 
 }
 .ui.header{
@@ -60,9 +81,12 @@ code {
   flex-direction: row;
   flex-wrap: wrap;
   position: relative;
+ 
   margin: 10px;
   grid-gap:10px;
   gap:10px;
+  place-content:center;
+  
 }
 .item{
   max-width: 100%;
@@ -91,7 +115,7 @@ code {
   margin: 10px;
   padding: 10px;
   text-align: center;
-  background-color: greenyellow;
+  background-color: rgba(28, 234, 21, 0.829);
 
 }
 .itemOffline{
@@ -106,12 +130,11 @@ code {
   margin: 10px;
   padding: 10px;
   text-align: center;
-  background-color: red;
+  background-color: rgb(250, 28, 28);
 
 }
 
 
 .containerGraph{
-
-display:flex
+display:flex;
 }
